tests/baselines/reference/unusedClassesinNamespace5.errors.txt
tests/cases/compiler/unusedClassesinNamespace5.ts(10,5): error TS6195: 'c3' is declared but not used.


==== tests/cases/compiler/unusedClassesinNamespace5.ts (1 errors) ====
    namespace Validation {
        class c1 {
    
        }
    
        export class c2 {
    
        }
    
        class c3 {
        ~~~~~~~~
!!! error TS6195: 'c3' is declared but not used.
            public x: c1;
        }
    }